[FIX] card body overflow

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -331,6 +331,10 @@ a.desc:after {
     box-shadow: 0 2px 6px rgba(0,0,0,.3);
 }
 
+.card-body {
+    overflow: auto;
+}
+
 
 
 
